--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.5",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.52.3",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.9"
   }
 }
